Update contact details in index.html
Updated contact information in the footer and contact section.

--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
           <div class="contact-info">
             <div class="info-item">
               <i class="fas fa-map-marker-alt"></i>
-              <p>123 Tech Street, Silicon Valley, CA</p>
+              <p>VVIT, Purnia, Bihar</p>
             </div>
             <div class="info-item">
               <i class="fas fa-phone-alt"></i>
-              <p>+1 (555) 123-4567</p>
+              <p>+91 9142620172</p>
             </div>
             <div class="info-item">
               <i class="fas fa-envelope"></i>
-              <p>hello@gitexplore.dev</p>
+              <p>udayroytech@gmail.com</p>
             </div>
             <!-- Simple map placeholder (can be replaced with iframe later) -->
             <div class="map-placeholder">
@@ -181,11 +181,10 @@
             <h4>Contact Us</h4>
             <ul class="footer-contact">
               <li>
-                <i class="fas fa-map-marker-alt"></i> 123 Tech Street, Silicon
-                Valley, CA
+                <i class="fas fa-map-marker-alt"></i>VVIT, Purnia, Bihar
               </li>
-              <li><i class="fas fa-phone-alt"></i> +1 (555) 123-4567</li>
-              <li><i class="fas fa-envelope"></i> hello@gitexplore.dev</li>
+              <li><i class="fas fa-phone-alt"></i> +91 9142620172</li>
+              <li><i class="fas fa-envelope"></i> udayroytech@gmail.com</li>
             </ul>
           </div>
 
@@ -193,14 +192,14 @@
           <div class="footer-col">
             <h4>Follow Us</h4>
             <div class="social-links">
-              <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
-              <a href="#" aria-label="Twitter"
+              <a href="https://github.com/Uday-Roy" aria-label="GitHub"><i class="fab fa-github"></i></a>
+              <a href="https://x.com/home" aria-label="Twitter"
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a href="#" aria-label="LinkedIn"
+              <a href="https://www.linkedin.com/in/udaykrroy" aria-label="LinkedIn"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="#" aria-label="Instagram"
+              <a href="https://www.instagram.com/uday.kr.roy/" aria-label="Instagram"
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
@@ -230,3 +229,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
